#339: Allow addiitonal parameters for GetWorkflowStep UC