@@ -38,10 +38,14 @@ public class GetWorkflowStepCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                new FieldDefinition("WorkflowName", FieldType.ENTITY_NAME, true, null, null),
-                new FieldDefinition("WorkflowStepName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("WorkflowName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("WorkflowStepName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
+                new FieldDefinition("Key", FieldType.KEY, false, null, null),
+                new FieldDefinition("Guid", FieldType.GUID, false, null, null),
+                new FieldDefinition("Ulid", FieldType.ULID, false, null, null)
+        );
     }
     
     /** Creates a new instance of GetWorkflowStepCommand */
@@ -51,18 +55,16 @@ public class GetWorkflowStepCommand
     
     @Override
     protected WorkflowStep getEntity() {
-        var workflowName = form.getWorkflowName();
-        var workflowStepName = form.getWorkflowStepName();
-
-        return WorkflowStepLogic.getInstance().getWorkflowStepByName(this, workflowName, workflowStepName);
+        return WorkflowStepLogic.getInstance().getWorkflowStepByUniversalSpec(this, form, true);
     }
 
     @Override
     protected BaseResult getTransfer(WorkflowStep workflowStep) {
-        var workflowControl = Session.getModelController(WorkflowControl.class);
         var result = WorkflowResultFactory.getGetWorkflowStepResult();
 
         if(workflowStep != null) {
+            var workflowControl = Session.getModelController(WorkflowControl.class);
+
             result.setWorkflowStep(workflowControl.getWorkflowStepTransfer(getUserVisit(), workflowStep));
         }
 
